--- a/Plantilla LaTeX.tex
+++ b/Plantilla LaTeX.tex
@@ -252,7 +252,7 @@ Esta, imprime los argumentos segun el formato. SI pones un numero entre el \% y 
 
 Para asignar una variable se pone el nombre de la variable, un signo igual y el valor que queremos asignar, que puede ser una constante u otra variable. A cada lado del signo igual no debe haber ningun espacio en blanco. SI delante o detras del igual dejamos un espacio en blanco obtendremos un error, porque lo tomará como si fuera una orden y sus argumentos, no como una variable. Ademas el nombre de una variable puede contener pero no empezar por un digito. \\
 
-Las variables pueden ser: \\
+Las variables pueden ser de distintos tipos: \\
 a) Cadenas, cuyo valor es una secuencia de caracteres\\
 b) Numeros, para usarlos en operaciones aritmeticas\\
 c) Constantes\\
