--- a/Plantilla LaTeX.tex
+++ b/Plantilla LaTeX.tex
@@ -51,7 +51,7 @@ Esto muestra el directorio completo de trabajo actual\\
 \hspace{2cm} Borra archivos o directorios\\
 
 \hspace{2cm} -r 
-\hspace{2cm}Borra recursivamente\\
+\hspace{2cm}Borra recursivamente.\\
 
 \textbf{cp} [opcion] [archivo o directorio] \hspace{2cm} Copia el archivo primero al segundo\\
 
