--- a/Plantilla LaTeX.tex
+++ b/Plantilla LaTeX.tex
@@ -57,7 +57,7 @@ Esto muestra el directorio completo de trabajo actual\\
 
 \hspace{2cm}\textbf{-s} crea un enlace en vez de copiar el archivo\\
 
-\hspace{2cm} \textbf{-r} copia recursivamente\\
+\hspace{2cm} \textbf{-r} copia recursivamente (tercer pr)\\
 
 \textbf{mv} [opcion] [inicio] [final] \hspace{2cm} mueve archivos \\
 
