--- a/Plantilla LaTeX.tex
+++ b/Plantilla LaTeX.tex
@@ -48,7 +48,7 @@ Esto muestra el directorio completo de trabajo actual\\
 
 \textbf{rm} [opcion] 
 
-\hspace{2cm} Borra archivos o directorios\\
+\hspace{2cm} Borra archivos o directorios (TODOS)\\
 
 \hspace{2cm} -r 
 \hspace{2cm}Borra recursivamente.\\
